--- a/templates/device/test.html
+++ b/templates/device/test.html
@@ -5,15 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!-- <script src="https://cdn.staticfile.org/jquery/2.0.0/jquery.min.js"> -->
+</script>
 </head>
 <body>
     <a href="http://IP/q/1010000000125418" target="_blank" data-id="1010000000125418" onclick="return false;">jQuery112</a>
-<script>
-    // console.log($('a').html())
-        $('a').click(function(){
-            console.log($(this).html())
-        });
-</script>
+    
+    <input name="NetState" type="radio" value="1"  class="zx" style="width:30px;height:30px"/>
 
+    <script>
+
+      // $(function(){
+      //   alert($('input').html())
+      // })
+
+      // $(document).ready(function(){
+        alert($('input[name="NetState"]').val())
+
+      // });
+    </script>
 </body>
 </html>
