11-9 update at office

--- a/templates/device/index/Equipment/index.html
+++ b/templates/device/index/Equipment/index.html
@@ -70,7 +70,7 @@
                                  
                                 <option value="10"  >参数设置失败</option> 
                                  
-                                <option value="11"  >正常制水</option> 
+                                <option value="11"  >正常制水_repeat?</option> 
                                  
                                 <option value="12"  >冲洗</option> 
                                  
